--- a/Flag/build.gradle
+++ b/Flag/build.gradle
@@ -1,15 +1,22 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven { url 'http://download.crashlytics.com/maven' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.7.+'
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+
     }
 }
 apply plugin: 'android'
+apply plugin: 'crashlytics'
 
 repositories {
     mavenCentral()
+    maven { url 'http://download.crashlytics.com/maven' }
+
 }
 
 android {
@@ -38,6 +45,7 @@ dependencies {
     compile 'com.caverock:androidsvg:1.2.0'
     compile 'com.google.android.gms:play-services:4.0.30'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.crashlytics.android:crashlytics:1.+'
 
     compile files('lib/libGoogleAnalyticsServices-3.01.jar')
     compile files('lib/nbpmobilead_1.2.2.jar')
