릴리즈 signing 키 용 및 proguard 적용

--- a/Flag/build.gradle
+++ b/Flag/build.gradle
@@ -29,10 +29,21 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    signingConfigs {
+        release {
+            storeFile file("../../keystore/release.keystore")
+            storePassword "qnfrhrl12!@"
+            keyAlias "bulgogi"
+            keyPassword "qnfrhrl12!@"
+        }
+    }
+
     buildTypes {
         release {
             runProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            signingConfig signingConfigs.release
         }
     }
 }
